go-swagger working
