# webapi/authapi/auth_api_structs.go
@@ -23,11 +23,13 @@ type LoginResult struct {
 
 // Login Request takes  in Username and Password.
 // swagger:parameters idOfloginEndpoint
-// in:body
+type UserLoginReqWrapper struct {
+	// in:body
+	Body UserLoginRequest `json:"body"`
+}
+
 type UserLoginRequest struct {
-	// in:body
-	UserName string `json:"userName"`
-	// in:body
+	UserName string `json:"username"`
 	Password string `json:"password"`
 }
 
@@ -38,11 +40,10 @@ type UserLoginRequest struct {
 
 // Respose will return login result and the user info.
 // swagger:response UserLoginResponse
+// This text will appear as description of your response body.
+// in:body
 type UserLoginResponse struct {
-	// This text will appear as description of your response body.
-	// in:body
-	Result LoginResult `json:"result"`
-	// in:body
+	Result   LoginResult      `json:"result"`
 	UserInfo services.UserDao `json:"UserDao"`
 }
 
